# Programming-basics-cpp

./: .gitignore  .gitmodules  README.md
010_Data_Structures/000_Build_Template/: CMakeLists.txt
010_Data_Structures/000_Build_Template/src/: main.cpp
010_Data_Structures/010_Build_Template/: CMakeLists.txt
010_Data_Structures/010_Build_Template/010_src/: LCD.hpp  main.cpp
010_Data_Structures/010_Build_Template/src/: LCD.cpp
010_Data_Structures/010_Queue/: CMakeLists.txt
010_Data_Structures/010_Queue/src/: Queue.cpp  Queue.hpp  unittest.cpp
010_Data_Structures/020_Trie/: CMakeLists.txt
010_Data_Structures/020_Trie/src/: Trie.cpp  Trie.hpp  unittest.cpp
030_Random/010_Counting_Colored_Squares/: CMakeLists.txt
030_Random/010_Counting_Colored_Squares/src/: CountingColoredSquares.cpp  unittest.cpp
030_Random/020_Scrap_Pad/src/: LinkedList.hpp  unittest.cpp
030_Random/030_Boost_linnk_test/: CMakeLists.txt
030_Random/030_Boost_linnk_test/src/: main.cpp
030_Random/040_Object_oriented/src/: Workspace.cpp  Workspace.hpp
030_Random/050_New_style_casting/: .atom-build.json
030_Random/050_New_style_casting/src/: main.cpp
A_tour_of_cpp/: CMakeLists.txt  README.md
A_tour_of_cpp/src/000_Toolchain_test/: CMakeLists.txt
A_tour_of_cpp/src/010_Chapter_1/: CMakeLists.txt  Workspace.h  Workspace_unit_test.cpp
A_tour_of_cpp/src/020_Chapter_2/: CMakeLists.txt  Workspace.cpp  Workspace_unit_test.cpp
A_tour_of_cpp/src/030_Chapter_3/: CMakeLists.txt  Workspace.cpp  Workspace.h  Workspace_unit_test.cpp
A_tour_of_cpp/src/040_Chapter_4/: CMakeLists.txt  Workspace.cpp  Workspace.h  Workspace_unit_test.cpp
A_tour_of_cpp/src/050_Chapter_5/: CMakeLists.txt  Workspace.h  Workspace_unit_test.cpp
A_tour_of_cpp/src/060_Chapter_6/: CMakeLists.txt  Workspace.cpp  Workspace.h  Workspace.hxx  Workspace_unit_test.cpp
A_tour_of_cpp/src/070_Chapter_7/: CMakeLists.txt  Workspace.h  Workspace.hxx  Workspace_unit_test.cpp
A_tour_of_cpp/src/080_Chapter_8/: CMakeLists.txt  Workspace.cpp  Workspace.h  Workspace_unit_test.cpp
A_tour_of_cpp/src/090_Chapter_9/: CMakeLists.txt  Workspace_unit_test.cpp
A_tour_of_cpp/src/100_Chapter_10/: CMakeLists.txt  Workspace.cpp  Workspace.h  (+1 more)
Cpp_onlinie_series/Introduction_into_templates_in_cpp/: CMakeLists.txt
Design_patterns_in_modern_cpp/: .clang-format  CMakeLists.txt  README.md  cmake_gen.bat
Design_patterns_in_modern_cpp/src/: CMakeLists.txt
Design_patterns_in_modern_cpp/src/000_Toolchain_test/: CMakeLists.txt  Workspace.hpp
Design_patterns_in_modern_cpp/src/010_Chapter_1/: CMakeLists.txt  Templates.h  Workspace.cpp  Workspace.h  Workspace_unit_test.cpp  main.cpp
Design_patterns_in_modern_cpp/src/020_Chapter_2/: CMakeLists.txt  Workspace.cpp  Workspace.h  Workspace_unit_test.cpp
Design_patterns_in_modern_cpp/src/030_Chapter_3/: CMakeLists.txt  Workspace.cpp  Workspace.h  Workspace_unit_test.cpp
Design_patterns_in_modern_cpp/src/040_Chapter_4/: CMakeLists.txt  Workspace.cpp  Workspace.h  Workspace_unit_test.cpp
Design_patterns_in_modern_cpp/src/050_Chapter_5/: Workspace.cpp  Workspace.h
Design_patterns_in_modern_cpp/src/060_Chapter_6/: CMakeLists.txt  Workspace.cpp  Workspace.h  Workspace_unit_test.cpp
Design_patterns_in_modern_cpp/src/070_Chapter_7/: CMakeLists.txt  Workspace.cpp  Workspace.h  Workspace_unit_test.cpp
Design_patterns_in_modern_cpp/src/080_Chapter_8/: CMakeLists.txt  Workspace.cpp  Workspace.h  Workspace_unit_test.cpp
Design_patterns_in_modern_cpp/src/090_Chapter_9/: CMakeLists.txt  Workspace.cpp  Workspace.h  Workspace_unit_test.cpp
Design_patterns_in_modern_cpp/src/100_Chapter_10/: CMakeLists.txt  Workspace.h
Design_patterns_in_modern_cpp/src/110_Chapter_11/: CMakeLists.txt  Workspace.cpp  Workspace.h  Workspace_unit_test.cpp
Design_patterns_in_modern_cpp/src/120_Chapter_12/: CMakeLists.txt  Workspace.cpp  Workspace.h  Workspace_unit_test.cpp
Design_patterns_in_modern_cpp/src/130_Chapter_13/: CMakeLists.txt  Workspace.cpp  Workspace.h  Workspace_unit_test.cpp
Design_patterns_in_modern_cpp/src/140_Chapter_14/: CMakeLists.txt  Workspace.cpp  Workspace.h  Workspace_unit_test.cpp
Design_patterns_in_modern_cpp/src/150_Chapter_15/: CMakeLists.txt  Workspace.cpp  Workspace.h  Workspace_unit_test.cpp
Design_patterns_in_modern_cpp/src/160_Chapter_16/: CMakeLists.txt  Workspace.h  Workspace_unit_test.cpp
Design_patterns_in_modern_cpp/src/170_Chapter_17/: CMakeLists.txt  Workspace.cpp  Workspace.h  Workspace_unit_test.cpp
Design_patterns_in_modern_cpp/src/180_Chapter_18/: Workspace.cpp  Workspace.h  Workspace_unit_test.cpp
Design_patterns_in_modern_cpp/src/190_Chapter_19/: CMakeLists.txt  Workspace.cpp  Workspace.h
Design_patterns_in_modern_cpp/src/200_Chapter_20/: CMakeLists.txt  Workspace.cpp  Workspace.h  Workspace_unit_test.cpp
Design_patterns_in_modern_cpp/src/210_Chapter_21/: Workspace.cpp  Workspace.h  Workspace_unit_test.cpp
Design_patterns_in_modern_cpp/src/220_Chapter_22/: Workspace.cpp  Workspace.h  Workspace_unit_test.cpp
Design_patterns_in_modern_cpp/src/230_Chapter_23/: Workspace.cpp  Workspace.h
Design_patterns_in_modern_cpp/src/240_Chapter_24/: Workspace.cpp  Workspace.h  Workspace_unit_test.cpp
Diving_deeper_into_templates_in_cpp/: CMakeLists.txt
Legacy_code/010_Data_Structures/020_Trie/: CMakeLists.txt
Legacy_code/030_Random/040_Object_oriented/: CMakeLists.txt
Legacy_code/030_Random/060_boost_setup/: CMakeLists.txt
Raytracing_in_on_week/: CMakeLists.txt  README.md
Raytracing_in_on_week/src/: CMakeLists.txt
Raytracing_in_on_week/src/010_Ray_tracer/: CMakeLists.txt  camera.h  camera.hxx  dielectric.h  dielectric.hxx  hittable.h  hittable_list.h  hittable_list.hxx  lambertian.h  lambertian.hxx  main.cpp  material.h  material.hxx  metal.h  metal.hxx  rand.h  ray.h  sphere.h  sphere.hxx  utils.h  vec3.h  vec3.hxx
Raytracing_in_on_week/src/020_Section/: CMakeLists.txt  main.cpp
Raytracing_in_on_week/src/020_Testing/: CMakeLists.txt  Workspace_unit_test.cpp  test_main.cpp
Raytracing_in_on_week/src/030_Benchmark/: BenchmarkRunner.cpp  CMakeLists.txt
(+43 files in other folders)
